delete non use import - manage percentage

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                 <div class="calculator-keyboard-row">
                     <div class="calculator-keyboard-key reset">AC</div>
                     <div class="calculator-keyboard-key operator">+/-</div>
-                    <div class="calculator-keyboard-key operator">%</div>
+                    <div class="calculator-keyboard-key number">%</div>
                     <div class="calculator-keyboard-key operator">/</div>
                 </div>
                 <div class="calculator-keyboard-row">
