--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,8 @@
 
           
         </div>
+
+        <p>code source: <a href="https://github.com/nootim/webpack-calculator">calculator</a></p>
         
     </div>
 </body>
